--- a/src/app/role-management/object-details/object-details.page.html
+++ b/src/app/role-management/object-details/object-details.page.html
@@ -17,10 +17,17 @@
     <div class="usa-width-one-half">
       <sam-list-display #permissionList [newValue]="permissionSetter" [(ngModel)]="selectedPermissions" [showNewIndicator]="true">
         <div class="input-and-add">
-          <sam-autocomplete #permission [labelText]="'Permissions'" name="permissions" [options]="permissionOptions" [config]="{addOnIconClass:'fa fa-search'}"></sam-autocomplete>
-          <button class="usa-button usa-button-transparent add-permission-button" (click)="onAddPermissionClick()">
-            <i class="fa fa-plus-circle"></i>
-          </button>
+          <sam-autocomplete
+            #permission
+            labelText="Permissions"
+            name="permissions"
+            [options]="permissionOptions"
+            [config]="{addOnIconClass:'fa fa-search'}"
+            (ngModelChange)="onAddPermissionClick()"
+          ></sam-autocomplete>
+          <!--<button class="usa-button usa-button-transparent add-permission-button" (click)="onAddPermissionClick()">-->
+            <!--<i class="fa fa-plus-circle"></i>-->
+          <!--</button>-->
         </div>
       </sam-list-display>
     </div>
