--- a/src/app/role-management/role-details/role-details.page.html
+++ b/src/app/role-management/role-details/role-details.page.html
@@ -24,6 +24,7 @@
         selectAllText='Associate Roles'
         title='Domain Roles'
         [hideDefaultColumn]="true">
+        [hideColumnHeader]="true"
       </permission-selector>
     </div>
 
