--- a/src/app/role-management/permission-selector/permission-selector.html
+++ b/src/app/role-management/permission-selector/permission-selector.html
@@ -5,23 +5,27 @@
   <div class="permissions-body">
 
     <!-- Column Headers -->
-    <div class="usa-grid-full check-all-row permission-row">
-      <div class="usa-width-one-twelfth">
-        <div class="empty-space">&nbsp;</div>
+    <ng-container *ngIf="!hideColumnHeader">
+      <div class="usa-grid-full check-all-row permission-row">
+        <div class="usa-width-one-twelfth">
+          <div class="empty-space">&nbsp;</div>
+        </div>
+        <div class="usa-width-one-third">
+          <strong>Permissions</strong>
+        </div>
+        <div class="usa-width-one-fourth">
+          <strong>Associate</strong>
+        </div>
+        <ng-container *ngIf="!hideDefaultColumn">
+          <div class="usa-width-one-fourth">
+            <strong>Default</strong>
+          </div>
+          <div class="usa-width-one-twelfth">
+            &nbsp;
+          </div>
+        </ng-container>
       </div>
-      <div class="usa-width-one-third">
-        <strong>Permissions</strong>
-      </div>
-      <div class="usa-width-one-fourth">
-        <strong>Associate</strong>
-      </div>
-      <div class="usa-width-one-fourth">
-         <strong>Default</strong>
-      </div>
-      <div class="usa-width-one-twelfth">
-        &nbsp;
-      </div>
-    </div>
+    </ng-container>
 
     <!-- All Column -->
     <div class="usa-grid-full permission-row">
@@ -34,12 +38,14 @@
       <div class="usa-width-one-fourth">
         <input type="checkbox" (click)="onCheckAllClick($event.target.checked)" [(ngModel)]="isAllChecked">&nbsp;
       </div>
-      <div class="usa-width-one-fourth">
-        <input type="checkbox" (click)="onCheckAllDefaultClick($event.target.checked)" [(ngModel)]="isAllDefaultsChecked">&nbsp;
-      </div>
-      <div class="usa-width-one-twelfth">
-        &nbsp;
-      </div>
+      <ng-container *ngIf="!hideDefaultColumn">
+        <div class="usa-width-one-fourth">
+          <input type="checkbox" (click)="onCheckAllDefaultClick($event.target.checked)" [(ngModel)]="isAllDefaultsChecked">&nbsp;
+        </div>
+        <div class="usa-width-one-twelfth">
+          &nbsp;
+        </div>
+      </ng-container>
     </div>
 
     <!-- Table Data -->
@@ -53,12 +59,14 @@
       <div class="usa-width-one-fourth">
         <input [attr.id]='option.label' type="checkbox" (click)="onPermissionClick($event.target.checked, option)" [(ngModel)]="option.isSelected" [disabled]="option.isDefault">&nbsp;
       </div>
-      <div class="usa-width-one-fourth">
-        <input type="checkbox" (click)="onDefaultClick($event.target.checked, option)" [(ngModel)]="option.isDefault">&nbsp;
-      </div>
-      <div class="usa-width-one-twelfth">
-        &nbsp;
-      </div>
+      <ng-container *ngIf="!hideDefaultColumn">
+        <div class="usa-width-one-fourth">
+          <input type="checkbox" (click)="onDefaultClick($event.target.checked, option)" [(ngModel)]="option.isDefault">&nbsp;
+        </div>
+        <div class="usa-width-one-twelfth">
+          &nbsp;
+        </div>
+      </ng-container>
     </div>
   </div>
 </div>
