On Edit click error bug fix

--- a/src/app/assistance-listing/assistance-listing-operations/sections/contact-information/contact-information.template.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/contact-information/contact-information.template.html
@@ -59,7 +59,7 @@
           formControlName="contact"
           (modelChange)="onParamChanged($event)"></samSelect>
 
-        <div id="newContact" *ngIf="contactGrp.controls.contact.value == 'new'">
+        <div id="newContact" *ngIf="contactGrp.controls.contact.value == 'new' || mode == 'Edit'">
 
         <samText
           [control]="falContactInfoForm.controls.contacts.controls[i].controls.title"
