fixed the sidenav for packages

--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -307,14 +307,16 @@
 
 
       <!-- Packages -->
-      <sam-download
-        [attachmentError]="attachmentError"
-        [packages]="packages"
-        [downloadAllUrl]="getDownloadAllPackagesURL(opportunity.opportunityId, opportunity.data?.statuses?.isArchived)"></sam-download>
+      <section [attr.id]="generateID(opportunityFields.Packages)" *ngIf="shouldBeDisplayed(opportunityFields.Packages) && ready">
+        <sam-download
+          [attachmentError]="attachmentError"
+          [packages]="packages"
+          [downloadAllUrl]="getDownloadAllPackagesURL(opportunity.opportunityId, opportunity.data?.statuses?.isArchived)"></sam-download>
 
-      <ng-container *ngIf="packagesWarning">
-        <samAlert [type]="packagesWarning.config?.type"><div [innerHTML]="packagesWarning.config?.description"></div></samAlert>
-      </ng-container>
+        <ng-container *ngIf="packagesWarning">
+          <samAlert [type]="packagesWarning.config?.type"><div [innerHTML]="packagesWarning.config?.description"></div></samAlert>
+        </ng-container>
+        </section>
 
 
       <section [attr.id]="generateID(opportunityFields.Contact)" *ngIf="shouldBeDisplayed(opportunityFields.Contact)">
