--- a/src/app/role-management/role-workspace.page.html
+++ b/src/app/role-management/role-workspace.page.html
@@ -1,5 +1,5 @@
-<div #workspaceRoot class="role-workspace usa-grid-full">
-  <samModal style= "top:20em" #removeModal [type]="modalConfig.type" [description]="modalConfig.description" [title]="modalConfig.title" [cancelButtonLabel]="'Cancel'" [submitButtonLabel]="'Remove'" (onSubmit)="onRemoveConfirm()" (onClose)="onRemoveCancel()" [closeOnOutsideClick]="false" [closeOnEscape]="false"></samModal>
+<div class="role-workspace usa-grid-full">
+  <samModal style= "top:20em" #removeModal [type]="modalConfig.type" [description]="modalConfig.description" [title]="modalConfig.title" [cancelButtonLabel]="'Cancel'" [submitButtonLabel]="'Remove'" (onSubmit)="onRemoveConfirm()"  [closeOnOutsideClick]="false" [closeOnEscape]="false"></samModal>
   <div class = "usa-width-one-fourth m_W-3em">
     <role-sidenav (pathChange) = "onPathChange($event)"  (checkSelected) = "onSelectedChange($event)" ></role-sidenav>
   </div>
