--- a/src/styles/components/role-management/_role-sidenav.scss
+++ b/src/styles/components/role-management/_role-sidenav.scss
@@ -21,7 +21,7 @@
   .tx-pad .btn-plus {
     position: absolute;
     top: 0.41em;
-    left: 12.5em;
+    right: 2.4em;
     font-size: 1.5em;
   }
   .tx-pad .btn-plus-error {
