binding checkbox with formcontrol

--- a/src/app/assistance-listing/assistance-listing-operations/sections/contact-information/contact-information.template.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/contact-information/contact-information.template.html
@@ -1,12 +1,14 @@
-<div id="stickyLabel" class="sticky-label" *ngIf="programId">Edit Contact Information - {{title}}</div>
+<div id="stickyLabel" class="sticky-label" *ngIf="programId">Edit Contact Information - {{progTitle}}</div>
 <form [formGroup]="falContactInfoForm">
 
   <h4>Information Contacts</h4>
 
   <samCheckbox
+    [control]="falContactInfoForm.controls['regLocalOffice']"
     [label]="'Regional or Local Office'"
     [name]="'regional_local_office'"
-    [options]="checkboxConfig.options"></samCheckbox>
+    [options]="checkboxConfig.options"
+    formControlName="regLocalOffice"></samCheckbox>
 
   <samTextArea [control]="falContactInfoForm.controls['addInfo']"
                [name]="'addInfo-input'"
