- Refacture system components structure completely (routing, component organization within module) - Updated `FormControl` property names - Created `System` and `POC` interface types
- Started a module system for IAM API service wrapper due to the large size of the library
- Integrated system-accounts api endpoints

--- a/src/styles/components/_authentication.scss
+++ b/src/styles/components/_authentication.scss
@@ -1,10 +1,10 @@
 @import 'authentication/shared/kba';
 @import 'authentication/shared/password';
 
-@import 'authentication/login';
 @import 'authentication/forgot';
 @import 'authentication/register';
 @import 'authentication/profile';
+@import 'authentication/system';
 
 .usa-authentication {
   padding-top: 80px;
