--- a/src/app/authentication/profile/profile.component.html
+++ b/src/app/authentication/profile/profile.component.html
@@ -6,6 +6,11 @@
         <a *ngIf="nav.routerLink" [routerLink]="[nav.routerLink]" [routerLinkActive]="[nav.routerLinkActive]" [innerText]="nav.text"></a>
         <a *ngIf="!nav.routerLink" [routerLinkActive]="[nav.routerLinkActive]" [innerText]="nav.text"></a>
       </li>
+      <ng-container *ngIf="states.system">
+        <li *ngFor="let systemNav of store.systemNav; let $index = index;">
+          <a *ngIf="systemNav.routerLink" [routerLink]="[systemNav.routerLink]" [routerLinkActive]="[systemNav.routerLinkActive]" [innerText]="systemNav.text"></a>
+        </li>
+      </ng-container>
     </ul>
   </aside>
   <section class="usa-width-three-fourths usa-profile" [ngClass]="[activeRouteClass]">
