--- a/src/styles/pages/_help-awards.scss
+++ b/src/styles/pages/_help-awards.scss
@@ -65,4 +65,9 @@
     max-height: 300px;
     overflow: auto;
   }
+
+  .awards-data-feature-tag{
+    padding: 0 5px;
+    display: inline-block;
+  }
 }
