--- a/src/app/assistance-listing/components/account-identification.template.html
+++ b/src/app/assistance-listing/components/account-identification.template.html
@@ -24,10 +24,18 @@
       <ng-container *ngFor="let account of model.accounts; let i=index">
         <tr>
           <td>{{ account.code }}</td>
+          <!--todo: wrap account description if it is long-->
           <td>{{ account.description }}</td>
           <td>
-            <a (click)="removeAccount(i)">Delete</a>
-            <a (click)="editAccount(i)">Edit</a>
+            <!--todo: handle this with css classes?-->
+            <ng-container *ngIf="currentIndex === model.accounts.length">
+              <a (click)="removeAccount(i)">Delete</a>
+              <a (click)="editAccount(i)">Edit</a>
+            </ng-container>
+            <ng-container *ngIf="currentIndex < model.accounts.length">
+              <s>Delete</s>
+              <s>Edit</s>
+            </ng-container>
           </td>
         </tr>
       </ng-container>
