Bug fix for Edit Cancel Edit clicks

--- a/src/app/assistance-listing/assistance-listing-operations/sections/contact-information/contact-information.template.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/contact-information/contact-information.template.html
@@ -138,7 +138,7 @@
           formControlName="country"></samSelect>
 
         </div> <!-- End of newcontact -->
-        <samButton buttonText="Cancel" (onClick)="onSubFormCancelClick()"></samButton>
+        <samButton buttonText="Cancel" (onClick)="onSubFormCancelClick(i)"></samButton>
         <samButton
           buttonText="Confirm"
           [buttonType]="(!contactGrp.valid ? 'disabled' : 'default')"
