--- a/src/app/app.template.html
+++ b/src/app/app.template.html
@@ -24,6 +24,7 @@
         <sam-autocomplete autofill-suggestions 
           [(ngModel)]="keyword" 
           [index]="index" 
+          [showClearButton]="true"
           name="appsearch" ></sam-autocomplete>
       </div>
     </samSearchbar>
