--- a/src/app/assistance-listing/assistance-listing-operations/sections/financial-info/other/financial-info-other.page.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/financial-info/other/financial-info-other.page.html
@@ -1,32 +1,23 @@
 <div *ngIf="otherFinancialInfoGroup" [formGroup]="otherFinancialInfoGroup">
-  <samTextArea [label] = "'Range and Average of Financial Assistance'"
-               [name] = "'assitance-range-input'"
-               [hint] = "'Provide a range that best represents the smallest and largest awards available. Provide an approximate average award size.'"
-               [required] = "false"
-               [control] = "otherFinancialInfoGroup.get('assistanceRange')"
-               [formControlName] = "'assistanceRange'"
+  <samTextArea [label]="'Range and Average of Financial Assistance'"
+               [name]="'assitance-range-input'"
+               [hint]="'Provide a range that best represents the smallest and largest awards available. Provide an approximate average award size.'"
+               [required]="false"
+               [control]="otherFinancialInfoGroup.get('assistanceRange')"
+               [formControlName]="'assistanceRange'"
   ></samTextArea>
 
-  <samCheckboxToggledTextarea [options] = "accomplishmentsConfig"
-                              [formControlName] = "'accomplishments'"
+  <samCheckboxToggledTextarea [options]="accomplishmentsConfig"
+                              [formControlName]="'accomplishments'"
   ></samCheckboxToggledTextarea>
 
-  <falAccountIdentificationInput [options] = "accountIdentificationConfig"
-                                 [formControlName] = "'accountIdentification'"
+  <falAccountIdentificationInput [options]="accountIdentificationConfig"
+                                 [formControlName]="'accountIdentification'"
   ></falAccountIdentificationInput>
 
-  <!--todo: tafs component-->
-  <falTAFSInput [name]="'foo'"
+  <falTAFSInput [options]="tafsConfig"
+                [formControlName]="'tafs'"
   ></falTAFSInput>
-
-  <div *ngIf="tafsGroup" [formGroup]="tafsGroup">
-    <samText [label] = "'Treasury Dept. Code'"
-             [name] = "'treasury-dept-code-input'"
-             [required] = "true"
-             [control] = "tafsGroup.get('treasuryDeptCode')"
-             [formControlName] = "'treasuryDeptCode'"
-    ></samText>
-  </div>
 
   <div>
     <div class="pull-left">
